--- a/GTG/plugins/notification_area/notification_area.ui
+++ b/GTG/plugins/notification_area/notification_area.ui
@@ -3,7 +3,7 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkAccelGroup" id="accelgroup1"/>
-  <object class="GtkAdjustment" id="adjustment1">
+  <object class="GtkAdjustment" id="adjustment_dangerzone">
     <property name="upper">100</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
@@ -37,7 +37,7 @@
             <property name="can_focus">False</property>
             <child>
               <object class="GtkCheckButton" id="pref_chbox_minimized">
-                <property name="label" translatable="yes">      Start gtg minimized</property>
+                <property name="label" translatable="yes">Start gtg minimized</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
@@ -72,7 +72,7 @@
                 <property name="secondary_icon_activatable">False</property>
                 <property name="primary_icon_sensitive">True</property>
                 <property name="secondary_icon_sensitive">True</property>
-                <property name="adjustment">adjustment1</property>
+                <property name="adjustment">adjustment_dangerzone</property>
                 <property name="numeric">True</property>
               </object>
               <packing>
