--- a/GTG/plugins/notification_area/notification_area.ui
+++ b/GTG/plugins/notification_area/notification_area.ui
@@ -86,8 +86,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="has_tooltip">True</property>
-                <property name="tooltip_text" translatable="yes">The notification icon is colored if there are tasks in the danger zone. 
-A danger zone of 0 days identify tasks due today or overdue.</property>
+                <property name="tooltip_text" translatable="yes">The icon in the notification area is colored if there are tasks in the danger zone. 
+A danger zone of 0 disables icon coloring.</property>
                 <property name="label" translatable="yes"> Danger zone (in days) </property>
               </object>
               <packing>
