--- a/GTG/gtk/plugins.glade
+++ b/GTG/gtk/plugins.glade
@@ -3,28 +3,46 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkAboutDialog" id="PluginAboutDialog">
+    <property name="can_focus">False</property>
     <property name="border_width">5</property>
     <property name="window_position">mouse</property>
     <property name="type_hint">dialog</property>
-    <signal name="close" handler="on_PluginAboutDialog_close"/>
-    <signal name="response" handler="on_PluginAboutDialog_close"/>
+    <signal name="close" handler="on_PluginAboutDialog_close" swapped="no"/>
     <signal name="delete-event" handler="on_PluginAboutDialog_close" swapped="no"/>
+    <signal name="response" handler="on_PluginAboutDialog_close" swapped="no"/>
     <child internal-child="vbox">
       <object class="GtkVBox" id="pa-vbox1">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkHButtonBox" id="pa-action_area1">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
         <child>
           <object class="GtkFrame" id="pa-frame1">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label_xalign">0</property>
             <property name="shadow_type">none</property>
             <child>
               <object class="GtkAlignment" id="pa-alignment1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="left_padding">12</property>
                 <child>
                   <object class="GtkLabel" id="PluginDepends">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <property name="use_markup">True</property>
                   </object>
                 </child>
@@ -33,24 +51,16 @@
             <child type="label">
               <object class="GtkLabel" id="pa-label1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">&lt;b&gt;Dependencies&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
               </object>
             </child>
           </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">3</property>
-          </packing>
-        </child>
-        <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="pa-action_area1">
-            <property name="visible">True</property>
-            <property name="layout_style">end</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="pack_type">end</property>
-            <property name="position">0</property>
           </packing>
         </child>
       </object>
@@ -58,7 +68,7 @@
   </object>
   <object class="GtkDialog" id="PluginsDialog">
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="border_width">10</property>
     <property name="title" translatable="yes">Plugins - Getting Things GNOME!</property>
     <property name="window_position">center-on-parent</property>
     <property name="default_width">500</property>
@@ -124,7 +134,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">&lt;b&gt;Available Plugins&lt;/b&gt;</property>
+                <property name="label" translatable="yes">&lt;b&gt;&lt;big&gt;Available Plugins&lt;/big&gt;&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
                 <property name="use_underline">True</property>
               </object>
@@ -149,7 +159,7 @@
                     <property name="headers_visible">False</property>
                     <property name="rules_hint">True</property>
                     <property name="show_expanders">False</property>
-                    <signal name="cursor_changed" handler="on_PluginTree_cursor_changed"/>
+                    <signal name="cursor-changed" handler="on_PluginTree_cursor_changed" swapped="no"/>
                   </object>
                 </child>
               </object>
@@ -172,9 +182,9 @@
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_action_appearance">False</property>
-                    <property name="use_underline">True</property>
                     <property name="image">img_plugin_about</property>
-                    <signal name="released" handler="on_plugin_about"/>
+                    <property name="use_underline">True</property>
+                    <signal name="released" handler="on_plugin_about" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -189,9 +199,9 @@
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_action_appearance">False</property>
-                    <property name="use_underline">True</property>
                     <property name="image">img_plugin_conf</property>
-                    <signal name="released" handler="on_plugin_configure"/>
+                    <property name="use_underline">True</property>
+                    <signal name="released" handler="on_plugin_configure" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
