--- a/GTG/gtk/preferences.glade
+++ b/GTG/gtk/preferences.glade
@@ -4,11 +4,9 @@
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkDialog" id="PreferencesDialog">
     <property name="can_focus">False</property>
-    <property name="border_width">5</property>
+    <property name="border_width">10</property>
     <property name="title" translatable="yes">Preferences - Getting Things GNOME!</property>
     <property name="window_position">center-on-parent</property>
-    <property name="default_width">500</property>
-    <property name="default_height">500</property>
     <property name="type_hint">dialog</property>
     <signal name="delete-event" handler="on_PreferencesDialog_delete_event" swapped="no"/>
     <child internal-child="vbox">
@@ -65,6 +63,20 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
+              <object class="GtkLabel" id="label1">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">0</property>
+                <property name="label" translatable="yes">&lt;big&gt;&lt;b&gt;Preferences&lt;/b&gt;&lt;/big&gt;</property>
+                <property name="use_markup">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkFrame" id="prefs-frame3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
@@ -114,7 +126,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
@@ -184,7 +196,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
