--- a/GTG/gtk/browser/taskbrowser.glade
+++ b/GTG/gtk/browser/taskbrowser.glade
@@ -175,32 +175,6 @@
                       </object>
                     </child>
                     <child>
-                      <object class="GtkMenuItem" id="plugins_mi">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="use_action_appearance">False</property>
-                        <property name="label">P_lugins</property>
-                        <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_edit_plugins_activate" swapped="no"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkMenuItem" id="backends_mi">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="use_action_appearance">False</property>
-                        <property name="label">_Synchronization Services</property>
-                        <property name="use_underline">True</property>
-                        <signal name="activate" handler="on_edit_backends_activate" swapped="no"/>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkSeparatorMenuItem" id="separator_4">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                      </object>
-                    </child>
-                    <child>
                       <object class="GtkImageMenuItem" id="edit_preferences_mi">
                         <property name="label">gtk-preferences</property>
                         <property name="visible">True</property>
@@ -210,6 +184,15 @@
                         <property name="use_stock">True</property>
                         <property name="accel_group">accelgroup1</property>
                         <signal name="activate" handler="on_preferences_activate" swapped="no"/>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkMenuItem" id="backends_mi">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="use_action_appearance">False</property>
+                        <property name="label">Setup Sync. Services</property>
+                        <signal name="activate" handler="on_edit_backends_activate" swapped="no"/>
                       </object>
                     </child>
                   </object>
@@ -238,7 +221,7 @@
                       </object>
                     </child>
                     <child>
-                      <object class="GtkSeparatorMenuItem" id="separator_5">
+                      <object class="GtkSeparatorMenuItem" id="separator_4">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                       </object>
@@ -1041,6 +1024,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child>
       <object class="GtkImageMenuItem" id="tcm_start_menu">
         <property name="label" translatable="yes">_Set start date</property>
+        <property name="submenu">start_for_context_menu</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="use_action_appearance">False</property>
@@ -1129,6 +1113,7 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <child>
       <object class="GtkImageMenuItem" id="tcm_due_menu">
         <property name="label" translatable="yes">Set due date</property>
+        <property name="submenu">due_context_menu</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="use_action_appearance">False</property>
