Also add mallard documentation pages for the search feature.

--- a/doc/userdoc/C/index.page
+++ b/doc/userdoc/C/index.page
@@ -43,6 +43,10 @@
     <title>Task Management</title>
  </section>
 
+ <section id="gtg-search" style="2column">
+    <title>Search For Tasks</title>
+ </section>
+
  <section id="gtg-sync" style="2column">
     <title>Sync Services</title>
  </section>
