Bug #1027817: Widgets in export plugin jumping up and down

--- a/GTG/plugins/export/export.ui
+++ b/GTG/plugins/export/export.ui
@@ -92,6 +92,7 @@
                   </object>
                   <packing>
                     <property name="position">0</property>
+                    <property name="expand">False</property>
                   </packing>
                 </child>
                 <child>
