--- a/GTG/gtk/plugins.ui
+++ b/GTG/gtk/plugins.ui
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy toplevel-contextual -->
+  <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAboutDialog" id="PluginAboutDialog">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
