--- a/GTG/plugins/task_reaper/reaper.ui
+++ b/GTG/plugins/task_reaper/reaper.ui
@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
 <interface>
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy toplevel-contextual -->
+  <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAccelGroup" id="accelgroup1"/>
   <object class="GtkWindow" id="preferences_dialog">
     <property name="border_width">10</property>
